# egent

./: .env.example  main.py  pyproject.toml
chapters/ch01_lcel/: concept.md  example.py  exercise.py  solution.py
chapters/ch02_prompt/: concept.md  example.py  exercise.py  solution.py
chapters/ch03_tools/: concept.md  example.py  exercise.py  solution.py
chapters/ch04_agent/: concept.md  example.py  exercise.py  solution.py
chapters/ch05_memory/: concept.md  example.py  exercise.py  solution.py
chapters/ch06_structured_output/: concept.md  example.py  exercise.py  solution.py
chapters/ch07_langgraph/: concept.md  example.py  exercise.py  solution.py
chapters/ch08_production/: concept.md  example.py  exercise.py  solution.py
docs/superpowers/plans/: 2026-06-28-langchain-agent-curriculum.md
docs/superpowers/specs/: 2026-06-28-langchain-agent-learning-guide-design.md
