[project]
name = "egent"
version = "0.1.0"
description = "LangChain Agent 学习项目"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
